reassign modifications for compcache
Change-Id: Ib3b271c56544166044bda9c0bab294f52db15536

--- a/apps/SpareParts/res/values/strings.xml
+++ b/apps/SpareParts/res/values/strings.xml
@@ -65,4 +65,9 @@
     <string name="compatibility_mode_summary_on">Run older apps in Compatibility mode. This require rebooting. </string>
     <!-- Sound & display settings screen, compatibility mode option summary text when check box is clear -->
     <string name="compatibility_mode_summary_off">Run older apps in Compatibility mode. This require rebooting. </string>
+
+    <string name="memctl_title">Memory Control Settings</string>
+    <string name="dialog_compcache_memctl_state">Compcache/Swap</string>
+    <string name="title_compcache_size">Compcache Size</string>
+    <string name="summary_compcache_size">Change Compcache Size</string>
 </resources>
